Wed Apr 23 17:13:27 2003  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_visitor_sequence/sequence_cs.cpp:

          Fixed errors in code generation for explicit template
          instantiation.

Wed Apr 23 16:37:35 2003  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tao/TAO.dsp:

          Turned on RTTI in IOP_CodecC.cpp.

Wed Apr 23 17:05:10 2003  Irfan Pyarali  <irfan@oomworks.com>

        * tests/Bug_1020_Basic_Regression/Bug_1020_Basic_Regression.dsw:
        * tests/Bug_1020_Basic_Regression/client.dsp:
        * tests/Bug_1020_Basic_Regression/server.dsp:
        * tests/Bug_1020_Regression/Bug_1020_Regression.dsw:
        * tests/Bug_1020_Regression/client.dsp:
        * tests/Bug_1020_Regression/server.dsp:

	  Reinstated these files.  These two tests should compile on VC6
	  now that config-win32-msvc-6.h file has been updated and the -GR
	  flag has been added to the project files.

	* tests\RTCORBA\RTCORBA-test-configurations.xls: 

	  Updated test configuration details.

Wed Apr 23 15:51:47 2003  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tao/Sequence_T.h:

          Removed unimplemented declarations of _tao_any_destructor.
          Thanks to Andrey Nechypurenko <andrey.nechypurenko@siemens.com>
          for reporting the problem.

Wed Apr 23 15:03:48 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>1

	* docs/tutorial/Quoter/AMI/Handler_i.h:
	* docs/tutorial/Quoter/AMI/Handler_i.cpp: Fixed the code to be
	  portable by removing _ptr's for non-object references.

Wed Apr 23 09:53:27 2003  Chad Elliott  <elliott_c@ociweb.com>

        * tests/AMI/AMI.mpc:
        * tests/AMI_Buffering/AMI_Buffering.mpc:
        * tests/AMI_Timeouts/AMI_Timeouts.mpc:
        * tests/BiDirectional/BiDirectional.mpc:
        * tests/BiDirectional_NestedUpcall/BiDirectional_NestedUpcall.mpc:
        * tests/Big_Oneways/Big_Oneways.mpc:
        * tests/Big_Reply/Big_Reply.mpc: