@@ -1,3 +1,13 @@
+Wed Apr 23 18:06:48 2003  Ossama Othman  <ossama@dre.vanderbilt.edu>
+
+	* tao/PortableServer/POA.cpp (id_to_reference_i):
+	  (establish_components):
+	* tao/PortableServer/Object_Adapter.cpp (open):
+
+	  Reverted Carlos' changes that attempted to fix Bug 1414
+	  (IORInterceptor deadlock).  It introduced other problems.
+	  Thanks to Irfan for detecting this problem.
+
 Wed Apr 23 17:13:27 2003  Jeff Parsons <j.parsons@vanderbilt.edu>
 
         * TAO_IDL/be/be_visitor_sequence/sequence_cs.cpp:
